class Accounting:
    def write(self, transactions):
        pass
