class Reader:
    def read(self, year): pass
